[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/PlayerRed_Frame_01_png_processed_movement.png" type="Texture" id=1]
[ext_resource path="res://art/PlayerRed_Frame_01_png_processed.png" type="Texture" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://Projectile.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "move",
"speed": 16.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "static",
"speed": 16.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), null, ExtResource( 2 ), null, ExtResource( 2 ), null ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
projectile_scene = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.75, 0.75 )
z_index = 1
frames = SubResource( 1 )
animation = "static"
playing = true

[node name="AnimatedDamageSprite" type="AnimatedSprite" parent="."]
visible = false
rotation = -1.5708
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( 0, -22, -21, 8, -19, 16, -10, 22, 9, 22, 19, 16, 22, 9 )
disabled = true

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( -33, 0 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxArea" type="CollisionPolygon2D" parent="Hitbox"]
rotation = -1.5708
polygon = PoolVector2Array( 0, -22, -21, 8, -19, 16, -10, 22, 9, 22, 19, 16, 22, 9 )
disabled = true

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="ImmunityTimer" to="." method="_on_ImmunityTimer_timeout"]
